# dadou_vision

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  conftest.py  dadou_utils_ros  docker-compose.yml  package-lock.json  package.json  proj_main.yml  pyproject.toml  pytest.ini  render.yaml  requirements-test.txt  robot
.github/workflows/: tests.yml
backend/: Dockerfile  manage.py
backend/dadou_vision/: celery.py  wsgi.py
backend/users/: tasks.py
conf/: Makefile  packages-docker.txt  packages.txt  requirements.txt  secret.example
conf/ansible/: deploy-cloud.yml  hosts
conf/docker/: .dockerignore  Dockerfile-bak
conf/ros2/: package.xml  setup.py
conf/ros2/launch/: vision.launch.py
conf/rpi/: alsa.conf  asound.conf
conf/scripts/: calibre-distance.sh  compose-up-local.sh  enregistre-rue.sh  launch-ros-in-docker.sh  mesure-cpu-conversation.sh  photo-camera.sh  utils.txt
conf/tests/: requirements.txt
json/: lights_base.json  lights_helmet.json
mediamtx/: mediamtx.yml  readme  script.sh
vision/: CHANGE  status.py  vision_config.py
vision/ai/: ai_audio.py  ai_interactions.py  ai_static.py  arbitration.py  camera.py  conversation.py  emotion_parser.py  interactions.py  llm_stream.py  performance.py  personas.py  stream_parser.py  stt.py  tts.py  tts_piper.py
vision/audio/: beeps.py  effects.py  mic.py  playback.py  vad.py  vad_replay.py
vision/db/: chat_db.py
vision/files/: sftp.py  vision_json_manager.py
vision/nodes/: _chat_wiring.py  ai_node.py  chat_node.py  lights_node.py  person_tracker_node.py  video_node.py  (+1 more)
(+58 files in other folders)
