<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.0.1</version>
  <description>Cerveau perceptif de Didier (Pi 5) : publie des perceptions caméra en topics ROS standard, ne commande jamais les moteurs (sécurité mouvement dans dadou_robot_ros).</description>
  <maintainer email="achats@duvam.net">dadou</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!-- Suivi de personne V1 : /vision/person publie des geometry_msgs/PointStamped
       (contrat ARCHITECTURE.md), cf. vision/nodes/person_tracker_node.py. -->
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
